ngebenerin spacing buat ukuran mobile yang lainnya

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
         <!-- Form di halaman login -->
         <section class="login__content-form">
-          <form action="#" method="POST" class="flex">
+          <form autocomplete="off" action="#" method="POST" class="flex">
             <div class="login__content-form-input flex">
-              <input type="username" name="username" id="username" placeholder="Username" required />
+              <input type="username" name="username" id="username" placeholder="Username" autocomplete="off" required />
               <input type="password" name="password" id="password" placeholder="Password" required />
             </div>
             <button class="login__content-form-button" type="submit">Login</button>
