--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- Form di halaman login -->
         <section class="login__content-form">
-          <form autocomplete="off" action="#" method="POST" class="flex">
+          <form autocomplete="off" action="./dashboard.html" method="POST" class="flex">
             <div class="login__content-form-input flex">
               <input type="username" name="username" id="username" placeholder="Username" autocomplete="off" required />
               <input type="password" name="password" id="password" placeholder="Password" required />
