--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SiSakti</title>
+    <title>SiSAKTI</title>
     <link rel="stylesheet" href="./dist/css/main.min.css" />
 
     <!-- Fonts -->
@@ -18,8 +18,10 @@
         <!-- Teks di halaman login -->
         <section class="login__content-greetings">
           <div class="title">
-            <h1>welcome</h1>
-            <h2>to SiSAKTI Pegadaian</h2>
+            <h1>
+              welcome to <br />
+              <span>SiSAKTI</span>
+            </h1>
           </div>
           <p>sistem administrasi keuangan & tresuri</p>
         </section>
