mengubah desain input form di login page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet" />
+
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <main class="login container">
@@ -30,8 +38,14 @@
         <section class="login__content-form">
           <form autocomplete="off" action="./dashboard.html" method="get" class="flex">
             <div class="login__content-form-input flex">
-              <input type="username" name="username" id="username" placeholder="Username" autocomplete="off" required />
-              <input type="password" name="password" id="password" placeholder="Password" required />
+              <div class="item flex flex-ai-c">
+                <i class="fas fa-user"></i>
+                <input type="username" name="username" id="username" placeholder="Username" autocomplete="off" required />
+              </div>
+              <div class="item flex flex-ai-c">
+                <i class="fas fa-key"></i>
+                <input type="password" name="password" id="password" placeholder="Password" required />
+              </div>
             </div>
             <button class="login__content-form-button" type="submit">Login</button>
           </form>
