selesai membuat modal register untuk admin menggunakan library sweetalert

--- a/dashboardAdmin.html
+++ b/dashboardAdmin.html
@@ -64,7 +64,7 @@
                   <td>Banget</td>
                   <td>Banget</td>
                   <td>
-                    <button class="btn-edit"><i class="far fa-edit"></i></button>
+                    <button value="register" class="btn-edit" data-soa="52418560"><i class="far fa-edit"></i></button>
                   </td>
                 </tr>
                 <tr>
@@ -77,7 +77,7 @@
                   <td>Pro</td>
                   <td>Pro</td>
                   <td>
-                    <button class="btn-edit"><i class="far fa-edit"></i></button>
+                    <button value="kembali" class="btn-edit"><i class="far fa-edit" data-soa="12345678"></i></button>
                   </td>
                 </tr>
                 <tr>
@@ -90,7 +90,7 @@
                   <td>Kurang</td>
                   <td>Kurang</td>
                   <td>
-                    <button class="btn-edit"><i class="far fa-edit"></i></button>
+                    <button value="register" class="btn-edit"><i class="far fa-edit" data-soa="87654321"></i></button>
                   </td>
                 </tr>
               </tbody>
