selesai membuat modal pengembalian untuk admin, membuat logic untuk menentukan button register atau kembali, membuat logic untuk mengambil data nomor soa dari table dan dipasang di form register ataupun pengembalian

--- a/dashboardAdmin.html
+++ b/dashboardAdmin.html
@@ -56,41 +56,41 @@
               <tbody>
                 <tr>
                   <td>1</td>
-                  <td>Fariz</td>
+                  <td>52418560</td>
                   <td>Ganteng</td>
                   <td>Banget</td>
                   <td>Banget</td>
                   <td>Banget</td>
-                  <td>Banget</td>
+                  <td>register</td>
                   <td>Banget</td>
                   <td>
-                    <button value="register" class="btn-edit" data-soa="52418560"><i class="far fa-edit"></i></button>
+                    <button class="btn-edit"><i class="far fa-edit"></i></button>
                   </td>
                 </tr>
                 <tr>
                   <td>2</td>
-                  <td>Alin</td>
+                  <td>12345678</td>
                   <td>Bocah</td>
                   <td>Pro</td>
                   <td>Pro</td>
                   <td>Pro</td>
-                  <td>Pro</td>
+                  <td>kembali</td>
                   <td>Pro</td>
                   <td>
-                    <button value="kembali" class="btn-edit"><i class="far fa-edit" data-soa="12345678"></i></button>
+                    <button class="btn-edit"><i class="far fa-edit"></i></button>
                   </td>
                 </tr>
                 <tr>
                   <td>3</td>
-                  <td>Rara</td>
+                  <td>87654321</td>
                   <td>Bocah</td>
                   <td>Kurang</td>
                   <td>Kurang</td>
                   <td>Kurang</td>
-                  <td>Kurang</td>
+                  <td>register</td>
                   <td>Kurang</td>
                   <td>
-                    <button value="register" class="btn-edit"><i class="far fa-edit" data-soa="87654321"></i></button>
+                    <button class="btn-edit"><i class="far fa-edit"></i></button>
                   </td>
                 </tr>
               </tbody>
