mengubah warna status dan button action untuk setiap status register dan kembali

--- a/dashboardAdmin.html
+++ b/dashboardAdmin.html
@@ -57,12 +57,12 @@
                 <tr>
                   <td>1</td>
                   <td>52418560</td>
-                  <td>Ganteng</td>
-                  <td>Banget</td>
-                  <td>Banget</td>
-                  <td>Banget</td>
+                  <td>ganteng</td>
+                  <td>banget</td>
+                  <td>banget</td>
+                  <td>banget</td>
                   <td>register</td>
-                  <td>Banget</td>
+                  <td>banget</td>
                   <td>
                     <button class="btn-edit"><i class="far fa-edit"></i></button>
                   </td>
@@ -70,12 +70,12 @@
                 <tr>
                   <td>2</td>
                   <td>12345678</td>
-                  <td>Bocah</td>
-                  <td>Pro</td>
-                  <td>Pro</td>
-                  <td>Pro</td>
+                  <td>bocah</td>
+                  <td>pro</td>
+                  <td>pro</td>
+                  <td>pro</td>
                   <td>kembali</td>
-                  <td>Pro</td>
+                  <td>pro</td>
                   <td>
                     <button class="btn-edit"><i class="far fa-edit"></i></button>
                   </td>
@@ -83,12 +83,12 @@
                 <tr>
                   <td>3</td>
                   <td>87654321</td>
-                  <td>Bocah</td>
-                  <td>Kurang</td>
-                  <td>Kurang</td>
-                  <td>Kurang</td>
+                  <td>bocah</td>
+                  <td>kurang</td>
+                  <td>kurang</td>
+                  <td>kurang</td>
                   <td>register</td>
-                  <td>Kurang</td>
+                  <td>kurang</td>
                   <td>
                     <button class="btn-edit"><i class="far fa-edit"></i></button>
                   </td>
@@ -99,7 +99,7 @@
         </section>
 
         <section class="dashboard__content-footer">
-          <button type="submit" class="btn-terima">terima dokumen</button>
+          <button type="submit" class="btn-terima"><i class="fas fa-plus"></i> &MediumSpace; terima dokumen</button>
         </section>
       </div>
     </main>
