--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
   </head>
   <body>
-    <main class="login container">
+    <main class="login">
       <header class="login__header"></header>
       <div class="login__content container--p flex flex-jc-sb">
         <!-- Teks di halaman login -->
@@ -36,7 +36,7 @@
 
         <!-- Form di halaman login -->
         <section class="login__content-form">
-          <form autocomplete="off" action="./dashboard.html" method="get" class="flex">
+          <form autocomplete="off" action="./dashboardPA.html" method="GET" class="flex">
             <div class="login__content-form-input flex">
               <div class="item flex flex-ai-c">
                 <i class="fas fa-user"></i>
