--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <!-- Form di halaman login -->
         <section class="login__content-form">
-          <form autocomplete="off" action="./dashboardPA.html" method="GET" class="flex">
+          <form autocomplete="off" action="./dist/pages/pemegang-anggaran/dashboard.html" method="GET" class="flex">
             <div class="login__content-form-input flex">
               <div class="item flex flex-ai-c">
                 <i class="fas fa-user"></i>
