mengubah default index page

--- a/index.html
+++ b/index.html
@@ -4,55 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SiSAKTI</title>
-    <link rel="stylesheet" href="./dist/css/main.min.css" />
+    <title>Live Update &MediumSpace;-&MediumSpace; Projek SiSAKTI Pegadaian</title>
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet" />
-
-    <!-- Icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-    />
+    <style>
+      a {
+        display: block;
+        font-size: 2rem;
+        margin-bottom: 2rem;
+      }
+    </style>
   </head>
   <body>
-    <main class="login">
-      <header class="login__header"></header>
-      <div class="login__content container--p flex flex-jc-sb">
-        <!-- Teks di halaman login -->
-        <section class="login__content-greetings">
-          <div class="title">
-            <h1>
-              welcome to <br />
-              <span>SiSAKTI</span>
-            </h1>
-          </div>
-          <p>sistem administrasi keuangan & tresuri</p>
-        </section>
-
-        <!-- Form di halaman login -->
-        <section class="login__content-form">
-          <form autocomplete="off" action="./dist/pages/pemegang-anggaran/dashboard.html" method="GET" class="flex">
-            <div class="login__content-form-input flex">
-              <div class="item flex flex-ai-c">
-                <i class="fas fa-user"></i>
-                <input type="username" name="username" id="username" placeholder="Username" autocomplete="off" required />
-              </div>
-              <div class="item flex flex-ai-c">
-                <i class="fas fa-key"></i>
-                <input type="password" name="password" id="password" placeholder="Password" required />
-              </div>
-            </div>
-            <button class="login__content-form-button" type="submit">Login</button>
-          </form>
-        </section>
-      </div>
-    </main>
-
-    <script src="./dist/js/main.js"></script>
+    <h1>Selamat datang di Live Update</h1>
+    <h2>Projek SiSAKTI Pegadaian</h2>
+    <br /><br />
+    <a href="./login.html">Login Page</a>
+    <a href="./dist/pages/pemegang-anggaran/dashboard.html">Dashboard Pemegang Anggaran</a>
+    <a href="./dist/pages/admin/dashboard.html">Dashboard Admin</a>
+    <a href="./dist/pages/kabag-aa/dashboard.html">Dashboard KABAG Anggaran & Akuntansi</a>
+    <a href="./dist/pages/kabag-tresuri/dashboard.html">Dashboard KABAG Tresuri</a>
+    <a href="/">Dashboard KADEP</a>
   </body>
 </html>
