mengubah value dari atribut method di form pada halaman login

--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
 
         <!-- Form di halaman login -->
         <section class="login__content-form">
-          <form autocomplete="off" action="" method="" class="flex">
+          <form autocomplete="off" action="" method="POST" class="flex">
             <div class="login__content-form-input flex">
               <div class="item flex flex-ai-c">
                 <i class="fas fa-user"></i>
