memberi function onclick pada tag link dashboard kadep yang ada di halaman live update

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <a href="./dist/pages/admin/dashboard.html">Dashboard Admin</a>
     <a href="./dist/pages/kabag-aa/dashboard.html">Dashboard KABAG Anggaran & Akuntansi</a>
     <a href="./dist/pages/kabag-tresuri/dashboard.html">Dashboard KABAG Tresuri</a>
-    <a href="/">Dashboard KADEP</a>
+    <a onclick="showMaintenence()">Dashboard KADEP</a>
+
+    <script>
+      function showMaintenence() {
+        alert("Halaman yang ingin dituju sedang dalam proses pembangunan");
+      }
+    </script>
   </body>
 </html>
