--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Live Update &MediumSpace;-&MediumSpace; Projek SiSAKTI Pegadaian</title>
+    <title>Live Preview &MediumSpace;-&MediumSpace; Projek SiSAKTI Pegadaian</title>
 
     <style>
       a {
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <h1>Selamat datang di Live Update</h1>
+    <h1>Selamat datang di Live Preview</h1>
     <h2>Projek SiSAKTI Pegadaian</h2>
     <br /><br />
     <a href="./login.html">Login Page</a>
