memperbarui link yang ada di halaman live preview

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="./dist/pages/admin/dashboard.html">Dashboard Admin</a>
     <a href="./dist/pages/kabag-aa/dashboard.html">Dashboard KABAG Anggaran & Akuntansi</a>
     <a href="./dist/pages/kabag-tresuri/dashboard.html">Dashboard KABAG Tresuri</a>
-    <a onclick="showMaintenence()">Dashboard KADEP</a>
+    <a href="./dist/pages/kadep/dashboard.html">Dashboard KADEP</a>
 
     <script>
       function showMaintenence() {
