menambahkan gif di halaman live preview

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <h1>Selamat datang di Live Preview</h1>
     <h2>Projek SiSAKTI Pegadaian</h2>
+    <img src="https://media.giphy.com/media/RLVQEgeUhZU5Yto2Hx/giphy.gif" width="100%" height="150px" alt="" />
     <br /><br />
     <a href="./login.html">Login Page</a>
     <a href="./dist/pages/pemegang-anggaran/dashboard.html">Dashboard Pemegang Anggaran</a>
