selesai bikin responsive login page sampe ukuran lgDesktop

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
     />
   </head>
   <body>
-    <main class="login">
+    <main class="login container">
       <header class="login__header"></header>
       <div class="login__content container--p flex flex-jc-sb">
         <!-- Teks di halaman login -->
