benerin file index.html

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <h1>Selamat datang di Live Preview</h1>
     <h2>Projek SiSAKTI Pegadaian</h2>
     <br /><br />
-    <a href="./login.html">Login Page</a>
-    <a href="./dist/pages/pemegang-anggaran/dashboard.html">Dashboard Pemegang Anggaran</a>
-    <a href="./dist/pages/admin/dashboard.html">Dashboard Admin</a>
-    <a href="./dist/pages/kabag-aa/dashboard.html">Dashboard KABAG Anggaran & Akuntansi</a>
-    <a href="./dist/pages/kabag-tresuri/dashboard.html">Dashboard KABAG Tresuri</a>
-    <a href="./dist/pages/kadep/dashboard.html">Dashboard KADEP</a>
+    <a href="./login.php">Login Page</a>
+    <a href="./dist/pages/pemegang-anggaran/dashboard.php">Dashboard Pemegang Anggaran</a>
+    <a href="./dist/pages/admin/dashboard.php">Dashboard Admin</a>
+    <a href="./dist/pages/kabag-aa/dashboard.php">Dashboard KABAG Anggaran & Akuntansi</a>
+    <a href="./dist/pages/kabag-tresuri/dashboard.php">Dashboard KABAG Tresuri</a>
+    <a href="./dist/pages/kadep/dashboard.php">Dashboard KADEP</a>
 
     <script>
       function showMaintenence() {
